--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,8 @@
 
         <div id="map"></div>
 
-        
+        <div class="loading"></div>
+
         <div id="about">
             <a class="close" href="#">&times;</a>
             <h2>Twittermap</h2>
@@ -41,6 +42,7 @@
         -->
 
         <script src="/leaf/leaflet.js"></script>
+        <script src="/js/flock.js"></script>
         <script src="/js/leafletMap.js"></script>
 
     </body>
